Добавлены комментарии к большинству классов